main: fixed navbar being just a tad too large

--- a/eutropia.user.css
+++ b/eutropia.user.css
@@ -85,7 +85,7 @@
 		position:sticky;
 		z-index:3;
 		top:0;
-		width:100vw;
+		width:100%;
         height:5rem;}
 	.btn-info,
 	.btn-primary{
